# cp210x-program

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README  README.rst  cp210x-program  cp210x-program.doap  cp210x-program.py  mypy.ini  requirements.txt  setup.cfg  setup.py  test.sh  test_platform_data.py  tox.ini
.github/workflows/: ci.yml  pylint.yml  release.yml  wheels.yml
cp210x/: __init__.py  cp210x.py  eeprom.py  usb.py  valuefile.py
doc/: 45-cp210x-programming.rules  cp210x.txt  index.html
ext/badge/: Makefile  cp2102.c  cp2102.h  cp2102N_PiUART_defaults.txt  cp2102N_default.txt  provision_example.sh
scripts/: cp210x-program.py  usb_read_cp210x.py
testdata/: cp2102-opi.hex  cp2102-opi.ini  cp2102-orig.hex  cp2102-orig.ini
