[metadata]
license_file = LICENSE
license = attr: cp210x.__license__
version = attr: cp210x.__version__

[flake8]
exclude =
    .git,
    __pycache__,
    examples,
    build,
    dist

max-line-length = 115
max-complexity = 15
addons = file,open,basestring,xrange,unicode,long,cmp
ignore =
    E201,  # whitespace after '('
    E203,  # whitespace before ':'
    E241,  # multiple spaces after ','
    E261,  # at least two spaces before inline comment
    E262,  # inline comment should start with '# '
    W503,  # line break before binary operator

[isort]
line_length=75
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
ensure_newline_before_comments=true
